# src/dtos/store.dto.js
@@ -11,3 +11,16 @@ export const pushNewMissionResponseDTO = (mission) => {
      "mission_spec" : mission[0].mission_spec
   }
 }
+
+export const previewReviewResponseDTO = (data) => {
+  const reviews = [];
+  for(let i = - 0 ; i < data.length; i++){
+    reviews.push({
+      "user_name" : data[i].user_name,
+      "score" : data[i].score,
+      "article" : data[i].article,
+    })
+  }
+  return {"reviewData" : reviews, "cusorId" : data[data.length-1].review_id};
+}
+
