# swagger/user.swagger.yaml
@@ -120,6 +120,281 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /user/mission:
+      post:
+        tags:
+          - User
+        summary: 미션추가 
+        parameters:
+        - name: new_mission_user
+          in: body
+          required: true
+          schema:
+            properties:
+              user_id:
+                type: int
+                description: 유저 아이디
+                example: 3
+              mission_id:
+                type: int
+                description: 미션 아이디
+                example: 2
+              status:
+                type: string
+                description: 진행상태
+                example: 진행중
+        responses:
+          '200':
+            description: 유저 미션 추가 성공!
+            schema:
+              type: object
+              properties:
+                status:
+                  type: integer
+                  example: 200
+                isSuccess:
+                  type: boolean
+                  example: true
+                code:
+                  type: integer
+                  example: 2000
+                message:
+                  type: string
+                  example: "success!"
+                data:
+                  type: object
+                  example: {
+                    "user_id" : 3,
+                    "mission_id": 2,
+                  }
+                  
+          '400':
+            description: 잘못된 요청
+            schema:
+              type: object
+              properties:
+                status:
+                  type: integer
+                  example: 400
+                isSuccess:
+                  type: boolean
+                  example: false
+                code:
+                  type: integer
+                  example: COMMON001
+                message:
+                  type: string
+                  example: 잘못된 요청입니다
 
+          '500':
+            description: 서버 에러
+            schema:
+              type: object
+              properties:
+                status:
+                  type: integer
+                  example: 500
+                isSuccess:
+                  type: boolean
+                  example: false
+                code:
+                  type: integer
+                  example: COMMON000
+                message:
+                  type: string
+                  example: 서버 에러, 관리자에게 문의 바랍니다.
 
+  /user/{userId}/review:
+    get:
+      tags:
+        - User
+      summary: 사용자 리뷰 조회 로직
+      parameters:
+        - name: userId
+          in: path
+          schema:
+            type: integer
+          required: true
+        - name: reviewId
+          in: query
+          required: false
+          schema:
+            properties:
+              reviewId:
+                type: integer
+        - name: paging
+          in: query
+          required: true
+          schema:
+            properties:
+              size:
+                type: integer
+      responses:
+        '200':
+          description: 리뷰 조회 성공
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: array
+                example: {
+                  "reviewData": [
+                    {
+                      "store_name": "정식당",
+                      "score": 20,
+                      "article": "리뷰1",
+                    },
+                    {
+                      "store_name": "안식당",
+                      "score": 4.5,
+                      "article": "리뷰2",
+                    }
+                  ],
+                  "cursorId": 1
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
+
+  /user/{userId}/mission:
+    get:
+      tags:
+        - User
+      summary: 사용자 미션 조회 로직
+      parameters:
+        - name: userId
+          in: path
+          schema:
+            type: integer
+          required: true
+        - name: missionId
+          in: query
+          required: false
+          schema:
+            properties:
+              missionId:
+                type: integer
+        - name: paging
+          in: query
+          required: true
+          schema:
+            properties:
+              size:
+                type: integer
+      responses:
+        '200':
+          description: 리뷰 조회 성공
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: array
+                example: {
+                  "missionData": [
+                    {
+                      "store_name": "정식당",
+                      "mission_spec": "빵먹기",
+                      "reward": 30,
+                    },
+                    {
+                      "store_name": "안식당",
+                      "mission_spec": "밥먹기",
+                      "reward": 20,
+                    }
+                  ],
+                  "cursorId": 1
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
   
